@@ -3,7 +3,7 @@
 <!--
  **
  * OpenRemote, the Home of the Digital Home.
- * Copyright 2008-2011, OpenRemote Inc.
+ * Copyright 2008-2013, OpenRemote Inc.
  *
  * See the contributors.txt file in the distribution for a
  * full listing of individual contributors.
@@ -44,6 +44,8 @@
             <value>classpath:config.properties</value>
             <value>classpath:roundrobin.properties</value>
             <value>classpath:lutron_homeworks.properties</value>
+            <value>classpath:denonAVRSerial.properties</value>
+            <value>classpath:enocean.properties</value>
           </list>
       </property>
   </bean>
@@ -73,8 +75,12 @@
     <property name = "resourceUploadAllowed" value = "${resource.upload.allowed}"/>
     <property name = "macroIRExecutionDelay" value = "${Macro.IR.Execution.Delay}" />
     <property name = "beehiveRESTRootUrl" value="${beehive.REST.Root.Url}" />
+    <property name = "beehiveAccountServiceRESTRootUrl" value="${beehiveAccountService.REST.Root.Url}" />
+    <property name = "beehiveDeviceDiscoveryServiceRESTRootUrl" value="${beehiveDeviceDiscoveryService.REST.Root.Url}" />
+    <property name = "beehiveSyncing" value="${controller.performBeehiveSyncing}" />
     <property name = "webappName" value="${controller.applicationname}" />
     <property name = "comPort" value = "${com.port}"/>
+    <property name = "lagartoBroadcastAddr" value = "${lagarto_network.broadcast}"/>
   </bean>
 
   <!-- round-robin variables -->
@@ -96,6 +102,12 @@
   </bean>
   
   <bean id="lutronHomeWorksGateway" class="org.openremote.controller.protocol.lutron.LutronHomeWorksGateway"/>
+
+  <bean id="enoceanConfig" class="org.openremote.controller.EnOceanConfiguration">
+    <property name="comPort" value="${enocean.comPort}" />
+    <property name="commLayer" value="${enocean.commLayer}" />
+    <property name="serialProtocol" value="${enocean.serialProtocol}" />
+  </bean>
 
   <!-- TODO -->
   <bean id = "controlCommandService"
@@ -121,7 +133,10 @@
     </bean>
 
     <!-- round-robin service -->
-    <bean id="roundRobinService" class="org.openremote.controller.service.impl.RoundRobinServiceImpl" />
+    <bean id="roundRobinService" class="org.openremote.controller.service.impl.RoundRobinServiceImpl" >
+    	<property name = "roundRobinConfig" ref = "roundRobinConfig"/>
+    </bean>
+
     
     <bean id = "servers" class="java.util.concurrent.ConcurrentHashMap" />
 
@@ -141,6 +156,7 @@
 
       <property name = "deployer" ref="deployer"/>
       <property name = "statusCache" ref="statusCache"/>
+      <property name = "changedStatusTable" ref = "changedStatusTable"/>
     </bean>
     
     <bean id = "changedStatusTable" class="org.openremote.controller.statuscache.ChangedStatusTable" />
@@ -234,6 +250,16 @@
 	<bean id = "controllerXMLListenSharingData" class="org.openremote.controller.config.ControllerXMLListenSharingData" />
    -->
 
+<!-- 
+Preinstalled protocols that come shipped with the controller. Additional protocols can be loaded during controller.xml deployment.
+The config section of the controller.xml needs to provide information about the additional protocol and the commandBuilder class.
+Additional protocols can either be added manually when editing controller.xml or the designer can create the entry when commands for that
+protocol are defined. 
+
+The entry looks like this:  <property name="protocol.zwave.classname" value="org.openremote.controller.protocol.zwave.ZWaveCommandBuilder" />
+
+The needed classes have to be provided as a jar file and copied to lib folder.
+ -->
   <bean id = "commandFactory" class = "org.openremote.controller.command.CommandFactory">
     <constructor-arg>
       <map>
@@ -254,6 +280,13 @@
         <entry key = "hsc40"            value-ref = "hsc40CommandBuilder"/>
         <entry key = "udp"              value-ref = "udpSocketCommandBuilder"/>
         <entry key = "denonAVRSerial"   value-ref = "denonAVRSerialCommandBuilder"/>
+        <entry key = "shellexe"         value-ref = "shellexeCommandBuilder"/>
+        <entry key = "isy99"            value-ref = "isy99CommandBuilder"/>
+        <entry key = "dscit100"         value-ref = "dscit100CommandBuilder"/>
+        <entry key = "lagarto"          value-ref = "lagartoCommandBuilder"/>
+        <entry key = "udpListener"      value-ref = "udpListenerCommandBuilder"/>
+        <entry key = "enocean"          value-ref = "enoceanCommandBuilder"/>
+        <entry key = "rrdGraphUrl"      value-ref = "rrdGraphUrlCommandBuilder"/>
       </map>
     </constructor-arg>
 <!--
@@ -284,6 +317,15 @@
 	 | extend the implementation with additional command types.
 	 +-->
 	
+	<!-- UDPListener Command Builder -->
+	<bean id = "udpListenerCommandBuilder" class = "org.openremote.controller.protocol.socket.UDPListenerCommandBuilder"/>
+	
+	<!-- rrdGraphUrl Command Builder -->
+	<bean id = "rrdGraphUrlCommandBuilder" class = "org.openremote.controller.protocol.rrdgraphurl.RrdGraphUrlCommandBuilder"/>
+
+	<!-- shellexe Command Builder -->
+	<bean id = "shellexeCommandBuilder" class = "org.openremote.controller.protocol.shellexe.ShellExeCommandBuilder"/>
+
 	<!-- Infrared Command Builder -->
 	<bean id = "irCommandBuilder" class = "org.openremote.controller.protocol.infrared.IRCommandBuilder"/>
 	
@@ -291,7 +333,7 @@
 	<bean id = "knxCommandBuilder" class = "org.openremote.controller.protocol.knx.KNXCommandBuilder">
 		<constructor-arg index="0" value="${knx.ip.interface.hostname}" />
 		<constructor-arg index="1" value="${knx.ip.interface.port}" type="int" />
-		<constructor-arg index="2" value="org.openremote.controller.protocol.bus.DatagramSocketPhysicalBus"/>
+		<constructor-arg index="2" value="org.openremote.controller.protocol.port.DatagramSocketPort"/>
 	</bean>
 
 	<!-- TCP Socket Command Builder for IP enabled devices -->
@@ -312,6 +354,9 @@
 	<!-- HTTP GET Command Builder -->
 	<bean id = "httpGetCommandBuilder" class = "org.openremote.controller.protocol.http.HttpGetCommandBuilder"
 	      scope = "prototype" />
+
+        <!-- EnOcean Command Builder -->
+        <bean id = "enoceanCommandBuilder" class = "org.openremote.controller.protocol.enocean.EnOceanCommandBuilder"/>
 
   <!-- 1-wire protocol Command Builder -->
   <bean id = "oneWireCommandBuilder" class = "org.openremote.controller.protocol.onewire.OneWireCommandBuilder"/>
@@ -364,7 +409,15 @@
     <constructor-arg index="1" value="${hsc40.interface.port}" type="int" />
   </bean>
 
-
+  <!-- DSC IT Security System -->
+  <bean id = "dscit100CommandBuilder" class = "org.openremote.controller.protocol.dscit100.DSCIT100CommandBuilder">
+    <constructor-arg value = "${dscit100.interface.password}"/>
+  </bean>
+  
+  <!-- Lagarto Command Builder for SWAP (panStamp) devices and other technologies -->
+  <bean id = "lagartoCommandBuilder" class = "org.openremote.controller.protocol.lagarto.LagartoCommandBuilder">
+    <property name="configuration" ref="configuration"/>
+  </bean>
 
   <!-- TODO -->
 	<bean id = "componentFactory" class = "org.openremote.controller.component.ComponentFactory">
@@ -376,6 +429,7 @@
         <entry key = "slider" value-ref = "sliderBuilder"/>
         <entry key = "gesture" value-ref = "gestureBuilder"/>
         <entry key = "image"  value-ref = "imageBuilder"/>
+        <entry key = "colorpicker" value-ref = "colorpickerBuilder"/>
       </map>
     </property>
 	</bean>
@@ -388,7 +442,24 @@
    +-->
   <bean id = "eventProcessorChain" class = "org.openremote.controller.statuscache.EventProcessorChain">
     <property name = "eventProcessors">
-      <bean class = "org.openremote.controller.statuscache.rules.RuleEngine" />
+    	<list>
+    		<bean class = "org.openremote.controller.statuscache.rules.RuleEngine" />
+    		<ref bean="rrd4jLogger"/>
+     		<ref bean="emonCMSLogger"/>
+    	</list>
+    </property>
+  </bean>
+
+  <bean id = "rrd4jLogger" class = "org.openremote.controller.statuscache.rrd4j.Rrd4jDataLogger" />
+  
+  <bean id = "emonCMSLogger" class = "org.openremote.controller.statuscache.emoncms.EmonDataLogger" >
+    <property name="emonURL" value="http://emoncms.org/api/post?apikey=47d18060923b1f84dcad19f0adc90645&amp;json=" />
+    <property name="sensors">
+      <list>
+      	<value>tempSensor</value>
+      	<value>sensor2</value>
+      	<value>sensor3</value>
+      </list>
     </property>
   </bean>
 
@@ -443,6 +514,15 @@
     <!--  TODO : this explicit dependency will go away once migrated to ObjectBuilder (see ORCJAVA-151) -->
     <property name = "deployer" ref = "deployer"/>
   </bean>
+
+  <!-- TODO -->
+  <bean id = "colorpickerBuilder" class="org.openremote.controller.component.control.colorpicker.ColorPickerBuilder">
+    <property name = "commandFactory" ref = "commandFactory"/>
+
+    <!--  TODO : this explicit dependency will go away once migrated to ObjectBuilder (see ORCJAVA-151) -->
+    <property name = "deployer" ref = "deployer"/>
+  </bean>
+
 	
 	<bean id = "gestureBuilder" class="org.openremote.controller.component.control.gesture.GestureBuilder">
     <property name = "commandFactory" ref = "commandFactory"/>
